crates/bc-cli/tests/cli/snapshots/cli__transfer__merge_unequal_legs_warns.snap
---
source: crates/bc-cli/tests/cli/transfer.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Merged [TRANSACTION_ID] into [TRANSACTION_ID].
----- stderr -----
warning: merge left a residual of -10 AUD
