crates/bc-cli/tests/cli/snapshots/cli__transfer__suggest_transfers_empty_json.snap
---
source: crates/bc-cli/tests/cli/transfer.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
[]
----- stderr -----
