crates/bc-cli/tests/cli/snapshots/cli__transfer__unmerge_invalid_id_errors.snap
---
source: crates/bc-cli/tests/cli/transfer.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid transaction ID 'not-an-id': invalid TransactionId: Suffix error: Invalid `TypeID` suffix: Suffix must be exactly 26 characters long
